PRL-4328 - Remove quarantine for court staff uploaded documents & move to confidential if restricted