@@ -2,7 +2,6 @@ package uk.gov.hmcts.reform.prl.services.managedocuments;
 
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.micrometer.core.instrument.util.StringUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -19,8 +18,8 @@ import uk.gov.hmcts.reform.prl.models.complextypes.QuarantineLegalDoc;
 import uk.gov.hmcts.reform.prl.models.complextypes.managedocuments.ManageDocuments;
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.services.UserService;
-import uk.gov.hmcts.reform.prl.services.time.Time;
 import uk.gov.hmcts.reform.prl.utils.CaseUtils;
+import uk.gov.hmcts.reform.prl.utils.CommonUtils;
 import uk.gov.hmcts.reform.prl.utils.DocumentUtils;
 
 import java.time.ZoneId;
@@ -32,7 +31,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import static org.springframework.util.CollectionUtils.isEmpty;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.CAFCASS;
@@ -63,8 +61,6 @@ public class ManageDocumentsService {
     @Autowired
     private final UserService userService;
 
-    private final Time dateTime;
-
     public static final String MANAGE_DOCUMENTS_TRIGGERED_BY = "manageDocumentsTriggeredBy";
     private final Date localZoneDate = Date.from(ZonedDateTime.now(ZoneId.of(LONDON_TIME_ZONE)).toInstant());
 
@@ -90,7 +86,7 @@ public class ManageDocumentsService {
                 List<Category> parentCategories = nullSafeCollection(categoriesAndDocuments.getCategories())
                     .stream()
                     .sorted(Comparator.comparing(Category::getCategoryName))
-                    .collect(Collectors.toList());
+                    .toList();
 
                 List<DynamicListElement> dynamicListElementList = new ArrayList<>();
                 CaseUtils.createCategorySubCategoryDynamicList(
@@ -109,6 +105,17 @@ public class ManageDocumentsService {
             .value(DynamicListElement.EMPTY).build();
     }
 
+    /**
+     * This is move the documents to quarantine/confidential/case documents based on.
+     * isRestricted flag & uploaded by.
+     * Legal rep/Cafcass(or Cafcass Cymru) -> isRestricted ? Quarantine : Case documents.
+     * Court admin/Judge/Legal adviser -> isRestricted ? Confidential : Case documents.
+     *
+     * @param callbackRequest - CCD callback request
+     * @param authorization - logged in user auth token
+     *
+     * @return - caseDataMap
+     */
     public Map<String, Object> copyDocument(CallbackRequest callbackRequest, String authorization) {
 
         CaseData caseData = CaseUtils.getCaseData(callbackRequest.getCaseDetails(), objectMapper);
@@ -213,7 +220,7 @@ public class ManageDocumentsService {
                                       List<Element<QuarantineLegalDoc>> quarantineDocs,
                                       String userRole,
                                       boolean isDocumentTab) {
-        if (StringUtils.isEmpty(userRole)) {
+        if (CommonUtils.isEmpty(userRole)) {
             throw new IllegalStateException(UNEXPECTED_USER_ROLE + userRole);
         }
 
@@ -238,7 +245,7 @@ public class ManageDocumentsService {
                 if (isDocumentTab) {
                     caseDataUpdated.put("courtStaffUploadDocListDocTab", quarantineDocs);
                 } else {
-                    caseDataUpdated.put("courtStaffQuarantineDocsList", quarantineDocs);
+                    caseDataUpdated.put("courtStaffUploadDocListConfTab", quarantineDocs);
                 }
                 break;
 
@@ -251,34 +258,28 @@ public class ManageDocumentsService {
     private List<Element<QuarantineLegalDoc>> getQuarantineDocs(CaseData caseData,
                                                                 String userRole,
                                                                 boolean isDocumentTab) {
-        if (StringUtils.isEmpty(userRole)) {
+        if (CommonUtils.isEmpty(userRole)) {
             throw new IllegalStateException(UNEXPECTED_USER_ROLE + userRole);
         }
 
-        switch (userRole) {
-            case SOLICITOR:
-                return getQuarantineOrUploadDocsBasedOnDocumentTab(
+        return switch (userRole) {
+            case SOLICITOR -> getQuarantineOrUploadDocsBasedOnDocumentTab(
                     isDocumentTab,
                     caseData.getReviewDocuments().getLegalProfUploadDocListDocTab(),
                     caseData.getLegalProfQuarantineDocsList()
-                );
-            case CAFCASS:
-
-                return getQuarantineOrUploadDocsBasedOnDocumentTab(
+            );
+            case CAFCASS -> getQuarantineOrUploadDocsBasedOnDocumentTab(
                     isDocumentTab,
                     caseData.getReviewDocuments().getCafcassUploadDocListDocTab(),
                     caseData.getCafcassQuarantineDocsList()
-                );
-            case COURT_STAFF:
-
-                return getQuarantineOrUploadDocsBasedOnDocumentTab(
+            );
+            case COURT_STAFF -> getQuarantineOrUploadDocsBasedOnDocumentTab(
                     isDocumentTab,
                     caseData.getReviewDocuments().getCourtStaffUploadDocListDocTab(),
-                    caseData.getCourtStaffQuarantineDocsList()
-                );
-            default:
-                throw new IllegalStateException(UNEXPECTED_USER_ROLE + userRole);
-        }
+                    caseData.getReviewDocuments().getCourtStaffUploadDocListConfTab()
+            );
+            default -> throw new IllegalStateException(UNEXPECTED_USER_ROLE + userRole);
+        };
     }
 
     private List<Element<QuarantineLegalDoc>> getQuarantineOrUploadDocsBasedOnDocumentTab(boolean isDocumentTab,
@@ -297,7 +298,7 @@ public class ManageDocumentsService {
                 .documentCreatedOn(localZoneDate).build() : null)
             .cafcassQuarantineDocument(CAFCASS.equals(userRole) ? manageDocument.getDocument().toBuilder()
                 .documentCreatedOn(localZoneDate).build() : null)
-            .courtStaffQuarantineDocument(COURT_STAFF.equals(userRole) ? manageDocument.getDocument().toBuilder()
+            .confidentialDocument(COURT_STAFF.equals(userRole) ? manageDocument.getDocument().toBuilder()
                 .documentCreatedOn(localZoneDate).build() : null)
             .build();
     }
